# Data-Recovery-tool

./: .gitignore  README.md  dataforge.spec  pyproject.toml
.github/agents/: data-recovery.agent.md
.github/instructions/: security.instructions.md  testing.instructions.md
.github/skills/file-carver/: SKILL.md
src/: __init__.py  main.py
src/core/: __init__.py  carver.py  disk.py  models.py  recovery.py  scanner.py  session.py  signatures.py  win_scanner.py
src/gui/: __init__.py  disk_selector.py  main_window.py  recovery_dialog.py  scan_progress.py  tree_view.py
src/utils/: admin.py  formatting.py  logging_setup.py
